# display

./: .bazelignore  .bazelrc  BUILD.bazel  BUTTON_FIXES.md  BUTTON_MENU_FIXES.md  BZLMOD_MIGRATION.md  Dockerfile  MODULE.bazel  Makefile  QUICKSTART.md  README.md  README.md.backup  SCROLLING_OUTPUT_FEATURE.md  TRUENAS_APP_README.md  USB_COPY_FIX.md  bazel-bin  bazel-display  bazel-out  bazel-testlogs  config.json.example  config_example.json  deploy-simple.sh  go.mod  go.sum  install-truenas.sh  install.sh  menu_structure.md  test_menu.sh  test_no_config.sh  truenas-deployment.yaml  uninstall-truenas.sh  verify_bzlmod.sh
cmd/: BUILD.bazel  main.go  test_button_fixes.go  test_buttons.go  test_display.go  test_mock.go  test_usb_fix.go
internal/config/: BUILD.bazel  config.go
internal/controller/: BUILD.bazel  display_controller.go  display_controller_test.go  led_controller.go  system_controller.go
internal/error/: BUILD.bazel  error.go
internal/hardware/: BUILD.bazel  io_port_access.go  io_port_access_test.go
internal/menu/: BUILD.bazel  menu.go  menu_test.go  mock_display.go
internal/monitor/: BUILD.bazel  usb_copy_monitor.go  usb_copy_monitor_test.go
internal/serial/: BUILD.bazel  display_test_helper.go  serial_port.go  serial_port_test.go
test/benchmark/: BUILD.bazel  benchmark_test.go
test/integration/: BUILD.bazel  integration_test.go
truenas-app/: README.md  app.yaml  questions.yaml  values.yaml
truenas-app/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  persistentvolumeclaim.yaml
