load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = ["integration_test.go"],
    deps = [
        "//internal/config",
        "//internal/controller",
        "//internal/hardware",
        "//internal/monitor",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//suite",
    ],
)
